--- a/CustomerChurn (3).ipynb
+++ b/CustomerChurn (3).ipynb
@@ -4163,7 +4163,7 @@
       "source": [
         "plt.figure(figsize=(10, 8))\n",
         "sns.barplot(x='Importance', y='Feature', data=feature_importance.head(15), palette='viridis')\n",
-        "plt.title('Top 15 Features Driving Customer Churn (XGBoost)')\n",
+        "plt.title('Top 15 Features Driving Customer Churn (Random Forest)')\n",
         "plt.xlabel('Feature Importance Score')\n",
         "plt.ylabel('Features')\n",
         "plt.show()\n"
